fix sidebar y-axis overflow

--- a/static/css/main_map_page.css
+++ b/static/css/main_map_page.css
@@ -53,3 +53,23 @@ Body {
 .form-group {
     text-align: center;
 }
+
+.hidden-scrollbar {
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
